Added instructions on comments

--- a/multi_1.html
+++ b/multi_1.html
@@ -11,6 +11,18 @@
 <script>
 
 // Script starts here
+// ADDING and SUBTRACTING 2 positive or negative integers
+//
+// Changes to be done:
+// Randomize 2 integers between 1 and 10
+// Randomize operation (sum or subtraction)
+// Randomize signs of both integers (positive or negative)
+//
+// Operation_string needs to use parenthesis around negative numbers
+// 
+// When printing final results, table needs to show results for each type of problem: 
+// 2 + 3, (-2) + 3, etc...
+
 
 function countdown(time)
 {
